--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <div class="container">
         <h2>Jogo da memória</h2>
         <div class="game"></div>
-        <button class="reset" onclick="window.location.reload()"> Reiniciar</button>
+        <p>Sabrina 2024</p>
+    </div>
+
+    <div class="alert-box" id="myAlert">
+      <p id="alertMessage">Este é um alerta bonito!</p>
+      <button class="reset" onclick="window.location.reload()"> Jogar Novamente </button>
     </div>
     
     <script src="./src/scripts/script.js"></script>
